spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -18,14 +18,14 @@ h1 {
   font-size: 3rem;
   color: #b20953;
   text-align: center;
-  margin: 0.3em;
-  margin-top: 0;
+  margin: 0;
 }
 
 nav ul {
   list-style-type: none;
   padding: 0;
   text-align: center;
+  margin-top: 0.3em;
 }
 
 nav li {
